fix scrollbar while modal displays

--- a/client/src/components/Art/ArtList/ArtList.module.scss
+++ b/client/src/components/Art/ArtList/ArtList.module.scss
@@ -54,3 +54,6 @@
   animation-duration: 2s;
   animation-iteration-count: infinite;
 }
+.masonry-wrapper {
+  overflow: auto !important;
+}
