--- a/client/src/components/Art/EditArt/EditArt.module.scss
+++ b/client/src/components/Art/EditArt/EditArt.module.scss
@@ -12,9 +12,30 @@
 .image-thumb {
   width: 100%;
   position: relative;
-  button {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-  }
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.05);
 }
+.change-art {
+  position: absolute;
+  top: 15px;
+  left: 20px;
+}
+// .remove-art {
+//   position: absolute;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   top: 20px;
+//   right: 20px;
+//   padding: 0 5px !important;
+//   border-radius: 50px;
+//   background-color: rgba(255, 255, 255, 1);
+//   &:hover {
+//     background-color: rgba(255, 255, 255, 0.8);
+//   }
+//   svg {
+//     height: 20px;
+//   }
+// }
