--- a/client/src/components/Modals/Modal.module.scss
+++ b/client/src/components/Modals/Modal.module.scss
@@ -96,7 +96,8 @@
 
 .form-field {
   width: 100%;
-  margin-top: 15px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 input[type='text'],
